fix problem with nav overlapping

--- a/style.scss
+++ b/style.scss
@@ -309,12 +309,11 @@ img {
 
 nav {
   float: right;
-  margin-top: 23px;
+  //margin-top: 23px;
   font-family: $helveticaNeue; 
   font-size: 24px;
-  position:absolute;
-  bottom: 8px;
-  right: 3px;
+  //padding-top: .5em;
+  display:inline;
   
   @include mobile {
     float: none;
